Hook useVisibility for performances, stop sketches when out of viewport.

--- a/src/components/section3/section3.css
+++ b/src/components/section3/section3.css
@@ -3,6 +3,7 @@
 
 .section3{
   overflow: hidden;
+  height: 120vw;
   /* transform: translateY(-315px); */
 }
 
