--- a/src/css/App.css
+++ b/src/css/App.css
@@ -7,7 +7,7 @@ body {
   position: relative;
   display: flex;
   flex-direction: column;
-  height: 280vh;
+  height: 290vh;
   overflow: hidden; 
     /* display: flex;
   flex-direction: column;
